--- a/app/src/main/assets/css/core/_colors.scss
+++ b/app/src/main/assets/css/core/_colors.scss
@@ -5,6 +5,7 @@ $bg_transparent: rgba(#f0f, 0.02) !default;
 
 $text: #d7b0d7 !default;
 $link: #d59ed5 !default;
+$accent: #3b5998 !default;
 $background: #451515 !default;
 $background2: rgba(lighten($background, 35%), 0.2) !default;
 $bg_opaque: rgba($background, 1.0) !default;
