--- a/app/src/main/assets/css/themes/custom.scss
+++ b/app/src/main/assets/css/themes/custom.scss
@@ -1,6 +1,7 @@
 $bg_transparent: unquote('$BT$');
 $text: unquote('$T$');
 $link: unquote('$TT$');
+$accent: unquote('$A$');
 $background: unquote('$B$');
 $background2: unquote('$BBT$');
 $bg_opaque: unquote('$O$');
