--- a/app/src/main/assets/css/themes/material_glass.scss
+++ b/app/src/main/assets/css/themes/material_glass.scss
@@ -1,7 +1,7 @@
 $text: #fff;
 $link: #eee;
+$accent: #5d86dd;
 $background: rgba(#000, 0.3);
-$background2: rgba(lighten($background, 50%), 0.05) !default;
 $bg_transparent: transparent;
 
 @import "../core/main";
