--- a/app/src/main/assets/css/themes/material_light.scss
+++ b/app/src/main/assets/css/themes/material_light.scss
@@ -1,6 +1,8 @@
 $text: #000;
 $link: #111;
+$accent: #3b5998;
 $background: #fafafa;
+$background2: rgba(darken($background, 35%), 0.2);
 $bg_transparent: #fafafa;
 
 @import "../core/main";
